apps/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
  - name: webui
    port: 8989
    targetPort: 8989
