apps/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Sonarr"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "sonarr.png"
    gethomepage.dev/description: "TV series automation"
    gethomepage.dev/href: "https://sonarr.home.arpa/"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sonarr.home.arpa
      secretName: homelab-wildcard-tls
  rules:
  - host: sonarr.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989
